--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,10 +1,57 @@
 doctype html
-html
+html[lang="en"]
   head
+    meta[charset="utf-8"]
+    meta[http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"]
+    = viewport_meta_tag
     title
-      | Simemo
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'application', 'data-turbolinks-track' => true
+      = content_for?(:title) ? yield(:title) : "Simemo"
     = csrf_meta_tags
+    = stylesheet_link_tag "application", :media => "all"
+    = favicon_link_tag 'apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144'
+    = favicon_link_tag 'apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114'
+    = favicon_link_tag 'apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72'
+    = favicon_link_tag 'apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png'
+    = favicon_link_tag 'favicon.ico', :rel => 'shortcut icon'
+    = javascript_include_tag "application"
   body
-    = yield
+    nav.navbar.navbar-default.navbar-fixed-top[role="navigation"]
+      .container
+        .navbar-header
+          button.navbar-toggle[type="button" data-toggle="collapse" data-target=".navbar-responsive-collapse"]
+            span.sr-only
+              | Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand[href="#"]
+            | Simemo
+        .navbar-collapse.collapse.navbar-responsive-collapse
+          ul.nav.navbar-nav
+            li.active
+              = link_to "Link1", '#'
+            li
+              = link_to "Link2", '#'
+            li
+              = link_to "Link3", '#'
+    .container
+      .row
+        .col-md-9
+          = bootstrap_flash
+          = yield
+        .col-md-3
+          .well.sidebar-nav
+            h3
+              | Sidebar
+            ul.nav.nav-list
+              li.nav-header
+                | Sidebar
+              li
+                = link_to "Link1", "#"
+              li
+                = link_to "Link2", "#"
+              li
+                = link_to "Link3", "#"
+      footer
+        p
+          | © Company 2015
