--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,11 +1,12 @@
 doctype html
-html[lang="ja"]
+html lang="ja"
   head
-    meta[charset="utf-8"]
-    meta[http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"]
+    meta charset="utf-8"
+    meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"
     = viewport_meta_tag
     title
       = content_for?(:title) ? yield(:title) : "Simemo"
+
     = csrf_meta_tags
     = stylesheet_link_tag "application", :media => "all"
     = favicon_link_tag 'apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144'
