--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -25,7 +25,7 @@ html lang="ja"
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand[href="#"]
+          a.navbar-brand[href="/"]
             | Simemo
         .navbar-collapse.collapse.navbar-responsive-collapse
           ul.nav.navbar-nav
